
= 2002/10/31

Change __DATA__ to __END__.  Don't know why I had
it wrong in the first place.

= 2002/03/05

Changed the license to make the Debian folks happy.
Changed the temporary file directory location code in
the test suite to make the Win32 people happy.
All changes for this release integrated by 
Alexander Zangerl <az@snafu.priv.at>.  Thank you!
