@@ -1,3 +1,11 @@
+= 2003/09/04
+
+This is the last release of File::Slurp by David Sharnoff.
+After this release, the File::Slurp namespace will be
+given to Uri Guttman <uri@stemsystems.com>.
+
+The only change in this release: a fix to the test suite
+'cause Uri Guttman noticed it was buggy.
 
 = 2002/10/31
 
